--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout_template"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".HomeScreenActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/top_toolbar"
