--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,7 +8,7 @@
 
     <EditText
         android:id="@+id/insert_code_field"
-        android:layout_width="wrap_content"
+        android:layout_width="271dp"
         android:layout_height="85dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -17,10 +18,15 @@
         android:layout_marginTop="430dp"
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="216dp"
+        android:background="#00FFFFFF"
         android:ems="10"
-        android:inputType="text"
+        android:focusable="auto"
+        android:focusableInTouchMode="true"
+        android:fontFamily="sans-serif"
+        android:inputType="text|textCapCharacters"
         android:text="@string/insert_code_field_hint"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textAllCaps="false" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -28,7 +34,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="394dp"
         android:layerType="software"
-        android:src="@drawable/dotted" />
+        android:src="@drawable/dotted"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/join_code_button"
@@ -39,7 +46,8 @@
         android:layout_marginEnd="137dp"
         android:layout_marginBottom="129dp"
         android:backgroundTint="@color/teal_700"
-        android:text="Join" />
+        android:text="Join"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/create_button"
@@ -52,7 +60,8 @@
         android:layout_marginEnd="85dp"
         android:layout_marginBottom="494dp"
         android:backgroundTint="@color/teal_700"
-        android:text="Create" />
+        android:text="Create"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/ignorable_object_1"
@@ -65,5 +74,22 @@
         android:text="OR"
         android:textAlignment="center"
         android:textColor="@color/dotted_line_color"
-        android:textSize="48sp" />
+        android:textSize="48sp"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/join_code_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="510dp"
+        android:layout_marginEnd="176dp"
+        android:layout_marginBottom="186dp"
+        android:textAllCaps="true"
+        android:textColor="#FF0000"
+        android:visibility="invisible" />
 </RelativeLayout>
