--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -79,4 +79,15 @@
         android:textAlignment="center"
         android:textSize="35sp" />
 
+    <TextView
+        android:id="@+id/logged_in_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="165dp"
+        android:layout_marginBottom="50dp"
+        android:text="Not logged in"
+        android:textAlignment="center" />
+
 </RelativeLayout>
