--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -103,4 +103,14 @@
         android:text="This request will timeout in X seconds."
         android:textColor="#FFFF0000" />
 
+    <TextView
+        android:id="@+id/login_verification_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="205dp"
+        android:layout_marginBottom="278dp"
+        android:textAlignment="center" />
+
 </RelativeLayout>
