--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -90,4 +90,26 @@
         android:text="Not logged in"
         android:textAlignment="center" />
 
+    <Button
+        android:id="@+id/home_button"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-1dp"
+        android:backgroundTint="@color/teal_700"
+        android:onClick="onElementPressed"
+        android:text="Home" />
+
+    <Button
+        android:id="@+id/home_to_settings_button"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="-1dp"
+        android:backgroundTint="@color/teal_700"
+        android:onClick="onElementPressed"
+        android:text="Settings" />
+
 </RelativeLayout>
