--- a/app/src/main/res/layout/settings_screen.xml
+++ b/app/src/main/res/layout/settings_screen.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <include layout="@layout/main_layout" />
 
     <Button
@@ -27,11 +28,52 @@
 
     <Switch
         android:id="@+id/showNotificationsSwitch"
+        android:layout_width="306dp"
+        android:layout_height="43dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="616dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:text="Show Notifications" />
+
+    <Switch
+        android:id="@+id/playSoundSwitch"
+        android:layout_width="302dp"
+        android:layout_height="59dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="555dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:text="Play Sound" />
+
+    <TextView
+        android:id="@+id/NOMODIFY_GENERAL_SETTINGS_MESSAGE_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="-2dp"
+        android:text="@string/settings_generic_message_1"
+        android:textAlignment="center"
+        android:textSize="15sp" />
+
+    <Button
+        android:id="@+id/settings_save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="520dp"
-        android:text="Show Notifications" />
+        android:layout_marginEnd="165dp"
+        android:layout_marginBottom="450dp"
+        android:backgroundTint="@color/teal_700"
+        android:text="Save" />
 </RelativeLayout>
